<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ali Client</string>
    <string name="hello">Hello ali-mobile!</string>
    
    <string name="dialog_title_hint">提示</string>
    <string name="dialog_title_alert">警告</string>
    
    <string name="dialog_button_confirm">确定</string>
    <string name="dialog_button_cancel">取消</string>
    
    <string name="network_is_available">检测到网络！</string>
    <string name="network_is_not_available">未检测到网络环境，请检查手机网络设置！</string>
    <string name="network_wifi_is_available">检测到WIFI网络！</string>
    <string name="network_wifi_is_not_available">检测到非WIFI网络环境，是否使用手机网络继续！</string>
    
    <string name="action_settings">设置</string>
    <string name="action_exit">退出</string>
    
    <string name="btn_guidance_click">开始体验</string>
    
    <string name="et_main_username">请输入用户名</string>
    <string name="et_main_password">请输入密码</string>
    <string name="cb_main_keep_password">记住密码</string>
    <string name="cb_main_auto_login">自动登陆</string>
    <string name="btn_main_login">登陆</string>
    <string name="btn_main_sign_up">注册 </string>
    <string name="tv_main_copyright">Copyright © 2014&#8211;2015, All Rights Reserved.</string>
    
</resources>